fix oauth2 login not save userAgent info and logout missing headers